--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 v0.5.0:
-  date: 2013-XX-XX
+  date: 2013-10-24
   changes:
-    - (in development; release date estimated)
+    - zip64 support.
 v0.4.3:
   date: 2013-04-17
   changes:
